--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@tanstack/react-query": "^5.8.6",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-material-ui": "^0.0.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
