--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-material-ui": "^0.0.1",
