--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-material-ui": "^0.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.20.0",
+    "react-share": "^5.0.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1"
@@ -38,6 +39,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.6",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
