--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-material-ui": "^0.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.20.0",
