--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -33,6 +34,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.20.0",
     "react-share": "^5.0.2",
+    "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1"
